# mlops-vehicle-insaurance

./: .gitignore  README.md  demo.py  pyproject.toml  setup.py  template.py
config/: schema.yaml
notebook/: mongoDB_demo.ipynb  vehicle_insuarance_experiment.ipynb
src/components/: data_ingestion.py  data_validation.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: vehicle_insuarance_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: training_pipeline.py
src/utils/: main_utils.py
